src/test/deca/context/valid/ContextAvecObjet/ManipulationClasse/methodCalledInMethodDifferentClassArgs.deca
// Description:
//  Appel d'une méthode avec plusieurs arguments dans la classe dans une méthode
//
// Resultats:
//    ok

class A {
    int x = -1;

    int getX(boolean a, int y){
        if (a){
            return x*y;
        }
        return x;
    }
}

class B{
    A ObjetA = new A();
    int x;

    void setX(boolean a, int y){
        x = ObjetA.getX(a, y);
    }
}



